<resources>
    <string name="app_name">Google Maps V2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">Smart City 2.0</string>
    <string name="title_activity_display_profile">Profile</string>
    <string name="title_activity_profile">Edit Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_traffic_map">Traffic Map</string>
    <string name="profile_title">My Profile</string>
    <string name="profile_personal">Personal Info</string>
    <string name="profile_login">Login Credentials</string>
    <string name="profile_swift911">Swift 911 Registration</string>
    <string name="profile_first_label">First Name</string>
    <string name="profile_last_label">Last Name</string>
    <string name="profile_home_address_label">Home Address</string>
    <string name="profile_work_address_label">Work Address</string>
    <string name="profile_home_zip_label">Home Zip</string>
    <string name="profile_work_zip_label">Work Zip</string>
    <string name="profile_gender_label">Gender</string>
    <string name="profile_age_label">Age Range</string>
    <string name="profile_phone_label">Phone Number</string>
    <string name="profile_email_label">Email Address</string>
    <string name="profile_userid_label">User ID</string>
    <string name="profile_username_label">Username</string>
    <string name="profile_password_label">Password</string>
    <string name="profile_password_confirm_label">Confirm Password</string>
    <string name="profile_swift911_label">Signup for Swift 911?</string>
    <string name="profile_gps_label">GPS Location</string>
    <string name="profile_submit_gps">Submit GPS Location Data?</string>
    <string name="profile_firstname">First</string>
    <string name="profile_lastname">Last</string>
    <string name="profile_address">Address</string>
    <string name="profile_zip">Zip</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_age">18&#8211;25</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_email">Email</string>
    <string name="profile_userid">ID</string>
    <string name="profile_username">username</string>
    <string name="profile_password">password</string>
    <string name="profile_button_save">Save</string>
    <string name="profile_button_save_password">Save New Password</string>
    <string name="profile_button_save_swift911">Save Swift 911 Information</string>
    <string name="profile_password_mismatch_title">Password Mismatch!</string>
    <string name="profile_password_mismatch_message">Password and Confirm Password do not match!</string>
    <string name="profile_button_OK">OK</string>
    <string name="airmapButtonText">Air Quality Map</string>
    <string name="settingsButtonText">Settings</string>
    <string name="profileButtonText">Set Up Profile</string>
    <string name="trafficButtonText">Traffic Maps</string>
    <string name="directionsButtonText">Directions</string>
    <string name="hoboken311ButtonText">Hoboken 311</string>
    <string name="myGasButtonText">My Gas</string>
    <string name="btn_311_map">Hoboken 311 Map</string>
    <string name="txt_prob">Choose a Problem</string>
    <string name="title_activity_hoboken311">Hoboken 311 Activity</string>
    <string name="menu_voice">Voice Command</string>
    <string name="txt_311_comment">Describe problem.</string>
    <string name="btn_311_send">Send</string>
    <string name="txtview">TextView</string>
    <string name="txt_date">Choose Date</string>
    <string name="txt_time">Choose Time</string>
    <string-array name="spn_street">
        <item>Select Street</item>
        <item>Jackson St</item>
        <item>Monroe St</item>
        <item>Madison St</item>
        <item>Jefferson St</item>
        <item>Adams St</item>
        <item>Grand St</item>
        <item>Clinton St</item>
        <item>Willow Ave</item>
        <item>Graden St</item>
        <item>Bloomfield St</item>
        <item>Washington St</item>
        <item>Court St</item>
        <item>Hudson St</item>
        <item>River St</item>
    </string-array>
    <string-array name="spn_prob">
        <item>Select Problem</item>
        <item>Animals</item>
        <item>Ask Us/ General FAQs</item>
        <item>Business &amp; Construction</item>
        <item>Garbage, Recycling &amp; Graffiti</item>
        <item>Health &amp; Social Services</item>
        <item>Housing &amp; Private Property</item>
        <item>Local Access Channel (Ch. 78 Cablevision/Ch. 47 FiOS)</item>
        <item>Noise</item>
        <item>Parking</item>
        <item>Parks &amp; Trees</item>
        <item>Signs, Signals &amp; Lights</item>
        <item>Transportation, Sidewalks &amp; Streets</item>
        <item>Utilities &amp; Flooding</item>
    </string-array>
    <string-array name="spn_spec_animal">
        <item>Select Problem Specification</item>
        <item>Animal Bite</item>
        <item>Animal Carcass in Road</item>
        <item>Animal Cruelty</item>
        <item>Dead Animal</item>
        <item>Dog Defecation</item>
        <item>Dog Without License</item>
        <item>Feeding Pigeons</item>
        <item>Illegal pets or livestock</item>
        <item>Injured Pet or Animal</item>
        <item>Kennel Complaints</item>
        <item>Pigeon Droppings</item>
        <item>Rodents and Insects</item>
        <item>Stray Animal</item>
        <item>Unleashed Animal</item>
    </string-array>
    <string-array name="spn_spec_ask">
        <item>Select Problem Specification</item>
        <item>Mayor\'s Office</item>
        <item>Website Feedback</item>
    </string-array>
    <string-array name="spn_spec_bus">
        <item>Select Problem Specification</item>
        <item>Construction Issues</item>
        <item>Excessive Signage</item>
        <item>Sidewalk Cafe Complaint</item>
    </string-array>
    <string-array name="spn_spec_bus_const">
        <item>Select Problem Specification *</item>
        <item>Abandoned Building/Property</item>
        <item>Property Alteration Without Permit</item>
        <item>Container Work Without Permit</item>
        <item>Sidewalk Work Without Permit</item>
        <item>Street Work Without Permit</item>
    </string-array>
    <string-array name="spn_spec_garb">
        <item>Select Problem Specification</item>
        <item>Garbage Related</item>
        <item>Graffiti Issues</item>
        <item>Illegal Posting of Flyers</item>
        <item>Recycling Related</item>
        <item>Request Container</item>
        <item>Request Public Bin Installation</item>
    </string-array>
    <string-array name="spn_spec_garb_rel">
        <item>Select Problem Specification *</item>
        <item>Dumpster Overflow</item>
        <item>Full Public Waste Bin</item>
        <item>Hazardous Waste Disposal</item>
        <item>Illegal Trash/Dumping</item>
        <item>Improper Storage of Trash Barrels</item>
        <item>Leaf Collection</item>
        <item>Missed Trash Pickup</item>
        <item>Trash</item>
        <item>Trash on a Vancat Lot</item>
    </string-array>
    <string-array name="spn_spec_garb_graff">
        <item>Select Problem Specification *</item>
        <item>Graffiti - City Property</item>
        <item>Graffiti - Parking Meters</item>
        <item>Graffiti - Parks</item>
        <item>Graffiti - Private Property</item>
    </string-array>
    <string-array name="spn_spec_garb_recycle">
        <item>Select Problem Specification *</item>
        <item>Recycling - Missed Pickup</item>
        <item>Recycling Sticker Request</item>
    </string-array>
    <string-array name="spn_spec_health">
        <item>Select Problem Specification</item>
        <item>Asbestos</item>
        <item>Bed Bugs</item>
        <item>Grease</item>
        <item>Hoarding</item>
        <item>Mold</item>
        <item>Odor Complaint</item>
        <item>Restaurant Operating Without License</item>
        <item>Suspected Food Poisoning</item>
        <item>Unlicensed Vendor</item>
        <item>Unsanitary Apartment</item>
        <item>Unsanitary Conditions</item>
    </string-array>
    <string-array name="spn_spec_housing">
        <item>Select Problem Specification</item>
        <item>Bells/Intercom Not Working</item>
        <item>Emergency Lighting</item>
        <item>Exterior Lighting</item>
        <item>Front Door Does Not Close</item>
        <item>Illegal Apartment/Property</item>
        <item>Illegal Sign</item>
        <item>Landlord Complaint</item>
        <item>Obstructed Sidewalk</item>
        <item>Occupancy Without Valid CO/CCO</item>
        <item>Smoke &amp; Carbon Monoxide Detector</item>
        <item>Uncut Grass</item>
        <item>Unsafe Structures</item>
        <item>Water Leaks</item>
        <item>Windows Need Replacing</item>
    </string-array>
    <string-array name="spn_spec_noise">
        <item>Select Problem Specification</item>
        <item>Animal Noise</item>
        <item>HVAC/Stationary Equipment Noise</item>
    </string-array>
    <string-array name="spn_spec_parking">
        <item>Select Problem Specification</item>
        <item>Illegally Parked Cars</item>
        <item>Parking Lot/Garage Complaint</item>
        <item>Parking Meter Malfunction</item>
        <item>Report Customer Service Experience</item>
        <item>Report Handicap Parking Abuse</item>
        <item>Report Parking Enforcement Experience</item>
        <item>Report Selective Parking Enforcement</item>
    </string-array>
    <string-array name="spn_spec_pt">
        <item>Select Problem Specification</item>
        <item>Parks</item>
        <item>Tree Issues</item>
    </string-array>
    <string-array name="spn_spec_pt_park">
        <item>Select Problem Specification *</item>
        <item>Bathroom Repair</item>
        <item>Benches</item>
        <item>Landscaping</item>
        <item>Light Out</item>
        <item>Painting</item>
        <item>Park Cleaning/Litter</item>
        <item>Playground Equipment</item>
        <item>Tree Work</item>
        <item>Tree Hedges/Weeds</item>
        <item>Vandalism</item>
    </string-array>
    <string-array name="spn_spec_pt_tree">
        <item>Select Problem Specification *</item>
        <item>New Tree Request</item>
        <item>Recommend a Tree Site</item>
        <item>Request a Sidewalk Tree Pit</item>
        <item>Tree Fallen Across Road</item>
        <item>Tree Fallen Across Sidewalk</item>
        <item>Tree Planting</item>
        <item>Tree Pruning/Trimming</item>
        <item>Tre Replacement</item>
        <item>Tree/Stump Removal</item>
    </string-array>
    <string name="gas_date">Date:</string>
    <string name="button_date">Change Date</string>
    <string name="gallons">Number of Gallons</string>
    <string name="edit_gallons">0</string>
    <string name="cost">Total Cost</string>
    <string name="edit_cost">$0.00</string>
    <string name="button_gas_save">Save</string>
    <string name="total_consumption">Total Consumption (past 3 mo.)</string>
    <string name="average_monthly">Avg Consumption/mo.</string>
    <string name="average_monthly_all">Avg Consumption/mo. (all Users)</string>
    <string name="total_cons">Total</string>
    <string name="avg_mon">Avg</string>
    <string name="avg_mon_all">AvgAll</string>
    <string name="show_date">Date</string>
    <string name="show_gallons"># of Gallons</string>
    <string name="show_cost">Total Cost</string>
</resources>