<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyGasActivity$DummySectionFragment" >

    <LinearLayout 
		android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    tools:context=".MyGasActivity$DummySectionFragment" >
	 
	    <TextView
	    	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight="10dp"
	        android:text="@string/gas_date"
	        android:textSize="15sp" />
	        
	    <TextView android:id="@+id/view_date"
	    	android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingRight="10dp"
	        android:onClick="showDatePickerDialog" />  
	        
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_date"
	        android:onClick="showDatePickerDialog" />
	        
	</LinearLayout>
	
    <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	tools:context=".MyGasActivity$DummySectionFragment" >
 
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallons"
            android:textSize="15sp" />
        
        <EditText android:id="@+id/edit_gallons"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/edit_gallons" 
        	android:inputType="text" />        
	        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	tools:context=".MyGasActivity$DummySectionFragment" >
 
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textSize="15sp" />
        
        <EditText android:id="@+id/edit_cost"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/edit_cost" 
        	android:inputType="text" />        
	        
    </LinearLayout>
    
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:text="@string/button_gas_save"
        android:onClick="saveGasConsumption" />
    
</LinearLayout>
