<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:id="@+id/view_cons_results"
    tools:context=".MyGasActivity$DummySectionFragment" >
    
        <LinearLayout 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	tools:context=".MyGasActivity$DummySectionFragment" >
	 
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/total_consumption"
	            android:textSize="15sp" />
	        
	        <EditText android:id="@+id/cons_total"
	            android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:text="@string/total_cons" 
	        	android:inputType="text" />        
	        
	    </LinearLayout>
	    
        <LinearLayout 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	tools:context=".MyGasActivity$DummySectionFragment" >
	 
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/average_monthly"
	            android:textSize="15sp" />
	        
	        <EditText android:id="@+id/cons_avg"
	            android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:text="@string/avg_mon" 
	        	android:inputType="text" />        
	        
	    </LinearLayout>
	    
        <LinearLayout 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	tools:context=".MyGasActivity$DummySectionFragment" >
	 
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/average_monthly_all"
	            android:textSize="15sp" />
	        
	        <EditText android:id="@+id/cons_avg_all"
	            android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:text="@string/avg_mon_all" 
	        	android:inputType="text" />        
	        
	    </LinearLayout>
	    
        <LinearLayout   
            android:orientation="vertical"   
            android:layout_width="fill_parent"   
            android:layout_height="250dip"   
            android:id="@+id/graph1" />
	    
        <TableLayout 
            android:id="@+id/gasResultsTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            
            <TableRow 
                android:id="@+id/headerRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >
                
                <TextView 
                    android:id="@+id/gas_date"
                    android:text="@string/show_date"
                    android:paddingLeft="5dip"
                    android:paddingRight="10dip" />
                
                <TextView 
                    android:id="@+id/gas_num"
                    android:text="@string/show_gallons"
                    android:paddingLeft="5dip"
                    android:paddingRight="10dip" />
                
                <TextView 
                    android:id="@+id/gas_cost"
                    android:text="@string/show_cost"
                    android:paddingLeft="5dip"
                    android:paddingRight="10dip" />
                
            </TableRow>
            
        </TableLayout>
    
    </LinearLayout>
    
</ScrollView>
