<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/airmapButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/cloud"
        android:onClick="startAirmapActivity"
        android:text="@string/airmapButtonText" />

    <Button
        android:id="@+id/trafficButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/traffic"
        android:onClick="startTrafficActivity"
        android:text="@string/trafficButtonText" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/user"
        android:onClick="startProfileActivity"
        android:text="@string/profileButtonText" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/gear"
        android:onClick="startSettingsActivity"
        android:text="@string/settingsButtonText" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/scitylogowhite" />

</LinearLayout>