<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal"
    android:orientation="vertical" >

   <Button
        android:id="@+id/airmapButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:drawableLeft="@drawable/cloud"
        android:onClick="startAirmapActivity"
        android:text="@string/airmapButtonText" />

    <Button
        android:id="@+id/trafficButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:drawableLeft="@drawable/navigate"
        android:onClick="startTrafficActivity"
        android:text="@string/trafficButtonText" />

    <Button
        android:id="@+id/directionsButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:drawableLeft="@drawable/location"
        android:onClick="startDirectionsInputActivity"
        android:text="@string/directionsButtonText" />
    
      <Button
        android:id="@+id/airqualitymapButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:drawableLeft="@drawable/cloud"
        android:onClick="startAirQualityActivity"
        android:text="@string/airQualityButtonText" />
    

</LinearLayout>
